added home app and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         {% block extra_js %}
         {% endblock %}
 
-        <title>My Ecommerce Shop {% block extra_meta %}{% endblock %}</title>
+        <title>My Ecommerce Shop {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
         <header class="container-fluid fixed-top"></header>
