added products app, models and fixtures

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,10 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-books-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Books
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="adult-books-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Adult Books
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-books-link">
+            <div class="dropdown-menu border-0" aria-labelledby="adult-books-link">
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Author</a>
                 <a href="" class="dropdown-item ">By Genre</a>
