added product details functionality

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,8 @@
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Author</a>
                 <a href="" class="dropdown-item ">By Genre</a>
-                <a href="" class="dropdown-item">By Popularity</a>
+                <a href="" class="dropdown-item">By Rating</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Books</a>
             </div>
         </li>
 
