--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,10 +37,21 @@
                         </a>
                     </p>
                     {% endif %}
+                    {% if product.author %}
+                    <p class="small mt-1 mb-0">
+                        <a class="text-muted" href=""> <!-- link I still need to add -->
+                            <i class="fas fa-pen mr-1"></i>Author: {{ product.author }}
+                        </a>
+                    </p>
+                    {% endif %}
                     {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small><br>
                     {% else %}
-                        <small class="text-muted">No Rating</small>
+                        <small class="text-muted">No Rating</small><br>
+                    {% endif %}
+                    {% if product.new_release %}
+                        <small class="text-muted"><i class="fas fa-paper-plane mr-1"></i>New Release!!!</small>
+                    {% else %}
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
