added view for updating quantity bag page and fixed bugs for this

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -51,7 +51,7 @@
                                         <p class="my-0">${{ item.price_per_item }}</p>
                                     </td>
                                     <td class="py-3 w-25">
-                                        <form class="form update-form" method="POST" action="">
+                                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                             {% csrf_token %}
                                             <div class="form-group">
                                                 <div class="input-group">
@@ -75,7 +75,7 @@
                                                             </span>
                                                         </button>
                                                     </div>
-                                                    <input type="hidden" name="product_format" value="{{ item.item_format }}">
+                                                    <input type="hidden" name="product_format" value="{{ item.format }}">
                                                 </div>
                                             </div>
                                         </form>
