--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
+        <li class="nav-item d-block d-md-none">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">
+                Home
+            </a>
+        </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=children_books,climate_and_nature,cooking,fantasy_and_science_fiction,history_and_politics,horror,literature,personal_development,romantic_novel,travel_and_holiday" id="all-books-link">
                 All Books
