--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -30,7 +30,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products'%}?category=authors" id="authors-link">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'authors'%}" id="authors-link">
                 Authors
             </a>
         </li>
