--- a/authors/templates/authors/authors.html
+++ b/authors/templates/authors/authors.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="product-container col-10 offset-1">
+                <div class="author-container col-10 offset-1">
                     <div class="row mt-1 mb-2">
                         <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                             <div class="sort-select-wrapper w-50">
@@ -41,7 +41,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row mb-5">
+                    <div class="row">
                         {% for author in authors %}
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="card h-100 border-2px">
