--- a/authors/templates/authors/author_detail.html
+++ b/authors/templates/authors/author_detail.html
@@ -28,19 +28,22 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="author-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ author.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold" id="author-country">Birth Country: {{ author.birth_country }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold" id="author-country">Birthday: {{ author.date_of_birth }}</p>
+                    <h1 class="mb-2 text-left font-weight-bold">{{ author.name }}</h1>
+                    <p class="mb-0" id="author-country">
+                        <i class="fas fa-flag mr-1"></i><bold class="font-weight-bold">Birth Country:</bold> {{ author.birth_country }}
+                    </p>
+                    <p class="mb-0" id="author-country">
+                        <i class="fas fa-clock mr-1"></i><bold class="font-weight-bold">Birthday: </bold>{{ author.date_of_birth }}</p>
                     {% if author.amazon_link %}
-                    <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{{ author.amazon_link }}">
-                            <i class="fas fa-link mr-1"></i> Link to amazon
+                    <p class="small mb-0 mt-1">
+                        <a class="text-muted" href="{{ author.amazon_link }}" target="_blank">
+                            <i class="fas fa-link mr-1"></i><bold class="font-weight-bold">Link to Amazon</bold>
                         </a>
                     </p>
                     {% endif %}
                     {% if author.books %}
                     <p class="small mt-1 mb-0">
-                        <i class="fas fa-book mr-1"></i>Books: {{ author.books }}
+                        <i class="fas fa-book mr-1"></i> <bold class="font-weight-bold">Books: </bold>{{ author.books }}
                     </p>
                     {% endif %}
                     {% if request.user.is_superuser %}
@@ -49,7 +52,8 @@
                             <a class="text-danger" href="{% url 'delete_author' author.id %}">Delete</a>
                         </small>
                     {% endif %}
-                    <p class="mt-3">{{ author.summary }}</p>
+                    <p class="mt-3 mb-0 font-weight-bold">Summary:</p>
+                    <p class="mt-0">{{ author.summary }}</p>
                 </div>
             </div>
         </div>
