--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -39,7 +39,7 @@
                     {% endif %}
                     {% if product.author %}
                     <p class="small mt-1 mb-0">
-                        <a class="text-muted" href=""> <!-- link I still need to add -->
+                        <a class="text-muted" href="{{ author.amazon_link }}" target="blank"> <!-- link I still need to add -->
                             <i class="fas fa-pen mr-1"></i>Author: {{ product.author }}
                         </a>
                     </p>
