--- a/templates/base.html
+++ b/templates/base.html
@@ -36,33 +36,27 @@
         <title>The Bookstore {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
-        <header class="container-fluid fixed-top">
-            <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left ">
-                    <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                        <h2 class="logo-font text-black my-0">
-                            <strong>The Bookstore</strong>
-                        </h2>
+        <!-- for the navigation lux from bootswatch (https://bootswatch.com/lux/) was used as template -->
+        <header class="container-fluid bg-dark">
+            <div id="topnav" class="row pt-lg-3 d-none d-lg-flex">
+                <!-- the item for the 'logo' -->
+                <div class="col-3 my-auto py-1 py-lg-0 text-center text-lg-left image-container">
+                    <a href="{% url 'home' %}" class="brand-logo">
+                        <img src="/media/thebookstore_logo.png" class="max-logo" alt="The Bookstore Holland">
                     </a>
                 </div>
-                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                    <form method="GET" action="{% url 'products' %}">
-                        <div class="input-group w-100">
-                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                            <div class="input-group-append">
-                                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                    <span class="icon">
-                                        <i class="fas fa-search"></i>
-                                    </span>
-                                </button>
-                            </div>
-                        </div>
+                <!-- the item for the 'search function' -->
+                <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
+                    <form class="d-flex" method="GET" action="{% url 'products' %}">
+                        <input class="form-control me-sm-2 mr-1" type="text" name="q" placeholder="Search">
+                        <button class="btn btn-light my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
-                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <div class="col-6 col-lg-3 my-auto py-1 py-lg-0">
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                        <!-- the item for the 'my account'-->
                         <li class="list-inline-item dropdown">
-                            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <div class="text-center">
                                     <div><i class="fas fa-user fa-lg"></i></div>
                                     <p class="my-0">My Account</p>
@@ -81,8 +75,9 @@
                                 {% endif %}
                             </div>
                         </li>
+                        <!-- the item for the 'shopping bag'-->
                         <li class="list-inline-item">
-                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link" href="{% url 'view_bag' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                     <p class="my-0">
@@ -98,24 +93,17 @@
                     </ul>
                 </div>
             </div>
-            <div class="row bg-white">
-                <nav class="navbar navbar-expand-lg navbar-light w-100">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+            <div>
+                <!-- the mobile navigation and the products/authors navigation -->
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-2 py-4 pt-lg-2 pb-lg-3">
+                    <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars fa-lg"></i>
                     </button>
                     {% include 'includes/mobile-top-header.html' %}
                     {% include 'includes/main-nav.html' %}
                 </nav>
             </div>
-            <div id="delivery-banner" class="row text-center">
-                <div class="col bg-black text-white">
-                    <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
-                </div>            
-            </div>
-
-            </div>
-        </header>
-
+        </header>       
         {% if messages %}
             <div class="message-container">
                 {% for message in messages %}
