--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,21 +1,21 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item d-block d-md-none">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">
+            <a class="nav-link text-white mr-5 lead" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=children_books,climate_and_nature,cooking,fantasy_and_science_fiction,history_and_politics,horror,literature,personal_development,romantic_novel,travel_and_holiday" id="all-books-link">
+            <a class="nav-link text-white mr-5 lead" href="{% url 'products' %}?category=children_books,climate_and_nature,cooking,fantasy_and_science_fiction,history_and_politics,horror,literature,personal_development,romantic_novel,travel_and_holiday" id="all-books-link">
                 All Books
             </a>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="genre-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-white mr-5 lead" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 Genre
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="genre-link">
+            <div class="dropdown-menu">
                 <a href="{% url 'products'%}?category=children_books" class="dropdown-item">Children Books</a>
                 <a href="{% url 'products'%}?category=climate_and_nature" class="dropdown-item">Climate / Nature</a>
                 <a href="{% url 'products'%}?category=cooking" class="dropdown-item">Cooking</a>
@@ -30,13 +30,13 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'authors'%}" id="authors-link">
+            <a class="nav-link text-white mr-5 lead" href="{% url 'authors'%}" id="authors-link">
                 Authors
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="new-arrivals-link">
+            <a class="nav-link text-white mr-5 lead" href="#" id="new-arrivals-link">
                 New Arrivals
             </a>
         </li>
