--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,29 +1,23 @@
-<ul>
+<ul class="mb-0">
+    <!-- the item for searching -->
     <li class="list-inline-item">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center">
+          <div class="text-center text-white">
               <div><i class="fas fa-search fa-lg"></i></div>
               <p class="my-0">Search</p>
           </div>
       </a>
       <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-          <form class="form" method="GET" action="{% url 'products' %}">
-              <div class="input-group w-100">
-                  <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                  <div class="input-group-append">
-                      <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
-                          <span class="icon">
-                              <i class="fas fa-search"></i>
-                          </span>
-                      </button>
-                  </div>
-              </div>
-          </form>
+        <form class="d-flex" method="GET" action="{% url 'products' %}">
+            <input class="form-control me-sm-2 mr-1" type="text" name="q" placeholder="Search">
+            <button class="btn btn-light my-sm-0 border-2px" type="submit">Search</button>
+        </form>
       </div>
   </li>
+  <!-- the item for 'my account' -->
   <li class="list-inline-item dropdown">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center">
+          <div class="text-center text-white">
               <div><i class="fas fa-user fa-lg"></i></div>
               <p class="my-0">My Account</p>
           </div>
@@ -41,8 +35,9 @@
           {% endif %}
       </div>
   </li>
+  <!-- the item for the shopping bag -->
   <li class="list-inline-item">
-      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
+      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-white{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
           <div class="text-center">
               <div><i class="fas fa-shopping-bag fa-lg"></i></div>
               <p class="my-0">
