made the new arrives code work as an filter

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -49,7 +49,7 @@
                     {% else %}
                         <small class="text-muted">No Rating</small><br>
                     {% endif %}
-                    {% if product.new_release %}
+                    {% if product.release.new %}
                         <small class="text-muted"><i class="fas fa-paper-plane mr-1"></i>New Release!!!</small><br>
                     {% else %}
                     {% endif %}
