made code more readable and fixed some bugs

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-white mr-5 lead" href="{% url 'products'%}?new_release=new_release!" id="new-arrivals-link">
+            <a class="nav-link text-white mr-5 lead" href="{% url 'products'%}?release=new_release!" id="new-arrivals-link">
                 New Arrivals
             </a>
         </li>
