--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,18 +13,71 @@
 
 {% block content %}
 
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+    <div class="overlay background-color-home"></div>
+    <div class="container">
+        <div class="row background-color-home-white mt-2">
+            <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mt-2">
+                <div id="carouselExampleIndicators" class="carousel slide border-2px" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="/media/book-horror.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/media/best-cooking-books.png" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/media/new-arrival-1.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row background-color-home-white pt-5">
+            <div class="col-12 col-md-6 offset-md-1 bg-info mr-md-1">
                 <h1 class="dispay-4 logo-font text-black">
-                    The new collections are here
+                    Watch our whole collection:
                 </h1>
-                <div class="my-5">
+                <div class="my-3">
                     <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Check it out!</a>
+                    </h4>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 bg-success">
+                <h1 class="dispay-4 logo-font text-black">
+                    Our new Arrivals:
+                </h1>
+                <div class="my-3">
+                    <h4>
+                        <a href="{% url 'products' %}" class="btn btn-lg btn-danger rounded-0 text-uppercase py-3">Check it out!</a>
                     </h4>
                 </div>
             </div>
         </div>
     </div>
+    
+    <div class="container">
+        <div class="row">
+            
+        </div>
+    </div>
+{% endblock %}
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('.carousel').carousel()
+    </script>
 {% endblock %}
