--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="row background-color-home-white pt-5">
-            <div class="col-sm-6 col-md-6 col-lg-4 ml-3">
+            <div class="col-sm-6 col-md-6 col-lg-4 ml-1">
                 <div class="card h-100 border-0">
                     {% if new_release_1.image %}
                     <a href="{% url 'product_detail' new_release_1.id %}">
@@ -115,12 +115,47 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    
-    <div class="container">
-        <div class="row">
-            
+            <div class="col-sm-6 col-md-6 col-lg-4 ml-1">
+                <div class="card h-100 border-0">
+                    {% if new_release_2.image %}
+                    <a href="{% url 'product_detail' new_release_2.id %}">
+                        <img class="card-img-top img-fluid" src="{{ new_release_2.image.url }}" alt="{{ new_release_2.name }}">
+                    </a>
+                    {% else %}
+                    <a href="{% url 'product_detail' new_release_2.id %}">
+                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ new_release_2.name }}">
+                    </a>
+                    {% endif %}
+                    <div class="card-body pb-0">
+                        <p class="mb-0">{{ new_release_2.name }}</p>
+                    </div>
+                    <div class="card-footer bg-white pt-0 border-0 text-left">
+                        <div class="row">
+                            <div class="col">
+                                <p class="lead mb-0 text-left font-weight-bold">${{ new_release_2.price }}</p>
+                                {% if new_release_2.category %}
+                                <p class="small mt-1 mb-0">
+                                    <a class="text-muted" href="{% url 'products' %}?category={{ new_release_1.category.name }}">
+                                        <i class="fas fa-tag mr-1"></i>{{ new_release_2.category.friendly_name }}
+                                    </a>
+                                </p>
+                                {% endif %}
+                                {% if new_release_2.rating %}
+                                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ new_release_2.rating }} / 5</small>
+                                {% else %}
+                                    <small class="text-muted">No Rating</small>
+                                {% endif %}
+                                {% if request.user.is_superuser %}
+                                    <small class="ml-3">
+                                        <a href="{% url 'edit_product' new_release_2.id %}">Edit</a> | 
+                                        <a class="text-danger" href="{% url 'delete_product' new_release_2.id %}">Delete</a>
+                                    </small>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
