--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,6 +17,7 @@
     <div class="container">
         <div class="row background-color-home-white mt-2">
             <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mt-2">
+                <!-- carousel from bootstrap -->
                 <div id="carouselExampleIndicators" class="carousel slide border-2px" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -25,13 +26,19 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="/media/book-horror.jpg" alt="First slide">
+                            <a href="{% url 'products'%}?category=horror"">
+                                <img class="d-block w-100" src="/media/book-horror.jpg" alt="Horror promotion">
+                            </a>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="/media/best-cooking-books.png" alt="Second slide">
+                            <a href="{% url 'products'%}?category=cooking">
+                                <img class="d-block w-100" src="/media/best-cooking-books.png" alt="Cooking promotion">
+                            </a>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="/media/new-arrival-1.jpg" alt="Third slide">
+                            <a href="{% url 'products'%}?release=new_release!">
+                                <img class="d-block w-100" src="/media/new-arrival-1.jpg" alt="New arrivals promotion">
+                            </a>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
