changed photo links and editted the readme file

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                 <!-- the item for the 'logo' -->
                 <div class="col-3 my-auto py-1 py-lg-0 text-center text-lg-left image-container">
                     <a href="{% url 'home' %}" class="brand-logo">
-                        <img src="/media/thebookstore_logo.png" class="max-logo" alt="The Bookstore Holland">
+                        <img src="{{ MEDIA_URL }}/thebookstore_logo.png" class="max-logo" alt="The Bookstore Holland">
                     </a>
                 </div>
                 <!-- the item for the 'search function' -->
